--- a/simplespoiler/styles/prosilver/theme/css/colors.css
+++ b/simplespoiler/styles/prosilver/theme/css/colors.css
@@ -6,7 +6,7 @@
  */
 
 details.spoiler {
-	background-color: #3a404a;
+	background-color: #171b24;
 }
 
 details.spoiler,
@@ -15,7 +15,7 @@ details.spoiler,
 }
 
 .spoiler-header {
-	background-color: #242a36;
+	background-color: #171b24;
 	color: #ccccaf;
 }
 
